# aoc2021

./: .gitignore
01/java/: Main.java
01/python/: main.py
01/rust/src/: main.rs
02/java/: Main.java
02/python/: main.py
02/rust/: Cargo.toml
02/rust/src/: main.rs
03/java/: Main.java
03/python/: main.py
03/rust/src/: main.rs
04/java/: Main.java
04/python/: main.py
04/rust/: Cargo.toml
04/rust/src/: main.rs
05/python/: main.py
05/rust/: Cargo.toml
05/rust/src/: main.rs
06/java/: Main.java
06/python/: main.py
06/rust/src/: main.rs
07/java/: Main.java
07/python/: main.py
07/rust/src/: main.rs
08/python/: main.py
08/rust/: Cargo.toml
08/rust/src/: main.rs
09/python/: main.py
09/rust/: Cargo.toml
09/rust/src/: main.rs
10/python/: main.py
10/rust/src/: main.rs
11/python/: main.py
11/rust/src/: main.rs
12/python/: main.py
13/python/: main.py
13/rust/src/: main.rs
14/python/: main.py
14/rust/src/: main.rs
15/python/: main.py
15/rust/src/: main.rs
17/rust/src/: main.rs
18/rust/: Cargo.toml
18/rust/src/: main.rs
20/python/: main.py
20/rust/: Cargo.toml
20/rust/src/: main.rs
21/python/: main.py
22/rust/: Cargo.toml
22/rust/src/: main.rs
24/rust/: Cargo.toml
24/rust/src/: main.rs
25/rust/src/: main.rs
