[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
enum-map = "1.1.1"
enumset = "1.0.8"
itertools = "0.10.3"
lazy_static = "1.4.0"
phf = { version = "0.10.0", features = ["macros"] }
thiserror = "1.0.30"


[features]
